# quality

./: .gitignore  LICENSE  NOTICE  README.md  pyproject.toml  requirements-dev.txt
docs/: bronze-quality.md  contract-based-quality.md  future-quality-frameworks.md  landing-quality.md  quality-design.md  silver-quality.md
examples/: README.md
examples/bronze/: measured-variable.jsonl  stations-metadata.jsonl  variables-metadata.jsonl
examples/landing/: measured-variable.json  stations-metadata.json  variables-metadata.json
examples/silver/: measurements.jsonl  stations.jsonl  variables.jsonl
scripts/: validate.sh
src/odl_quality/: cli.py
src/odl_quality/checks/: bronze.py  landing.py  silver.py
src/odl_quality/contracts/: catalog_contract_loader.py  schema_validator.py
src/odl_quality/models/: result.py
src/odl_quality/readers/: json_reader.py  jsonl_reader.py
src/odl_quality/reports/: console.py
src/odl_quality/validation/: resources.py
tests/: test_bronze_checks.py  test_cli.py  test_contracts.py  test_jsonl_reader.py  test_landing_checks.py  test_silver_checks.py
