[project]
name = "odl-quality"
version = "0.1.0"
description = "Local data quality validation for Open Data Lakehouse Lab"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "Apache-2.0"}
dependencies = [
    "pydantic>=2.0.0",
    "typer>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "mypy",
]

[project.scripts]
odl-quality = "odl_quality.cli:app"

[tool.ruff]
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
